2009-08-20 [holger]	0.1cvs10

	* ChangeLog
	* README
		Fix README and ChangeLog

2009-08-19 [holger]	0.1cvs9

	* README
		Add some examples

2009-08-19 [holger]	0.1cvs8

	* src/clawsmailmodule.c
	* src/nodetype.c
		Add basic interface to quicksearch

2009-08-19 [holger]	0.1cvs7

	* .cvsignore
		more files to ignore
	* README
	* src/Makefile.am
	* src/clawsmailmodule.c
	* src/foldertype.c
	* src/foldertype.h
	* src/nodetype.c
	* src/nodetype.h
		Implement a tree widget, and
		provide access to the folderview

2009-08-19 [paul]	0.1cvs6

	* Makefile.am
	* configure.ac
	* src/Makefile.am
		reduce the minimum required python to 2.5
		and other autofoo fixes

2009-08-10 [holger]	0.1cvs5

	* README
		Be a little more elaborate
	* configure.ac
		Make PyGTK mandatory

2009-08-09 [holger]	0.1cvs4

	* .cvsignore
	* config/.cvsignore
	* po/.cvsignore
	* src/.cvsignore
		More files to ignore

2009-08-09 [holger]	0.1cvs3

	* configure.ac
		Increase version number to 0.1

2009-08-09 [holger]	0.0cvs2

	* config/config.rpath
		Add forgotten file

2009-08-09 [holger]	0.0cvs1

	* Initial import