@@ -1,3 +1,11 @@
+2009-08-20 [holger]	0.1cvs11
+
+	* configure.ac
+	* src/python_plugin.c
+		Bump required Claws Mail version to 3.7.19
+	* src/composewindowtype.c
+		Add interface for attaching files to a compose window
+
 2009-08-20 [holger]	0.1cvs10
 
 	* ChangeLog
